
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.xhk.grpc.spring.proto.proto";
option java_outer_classname = "HealthProto";

service Health {
  rpc Liveness (HealthCheckRequest) returns (HealthCheckResponse);
  rpc Readiness (HealthCheckRequest) returns (HealthCheckResponse);
  rpc Terminate (HealthCheckRequest) returns (HealthCheckResponse);
}

message HealthCheckRequest {}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    TERMINATING = 3;
  }
  ServingStatus status = 1;
}
